# colibra

./: .clang-format  CMakeLists.txt  README.md
cmake/: aquire_doctest.cmake
include/colibra/: matrix.h  vector.h
include/colibra/details/: vector.hpp
test/: test_matrix.cpp  test_vector.cpp
